fix layout issue

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -222,37 +222,33 @@ main {
   max-height: 100vh;
   width: 100vw;
 }
+
+
+
 ul{
   list-style-type: disc;
-  padding-left: 1.5rem;
 } 
 
 ul  ul{
   list-style-type: circle;
-  padding-left: 1.5rem;
 }
 
 ul  ul  ul{
   list-style-type: square;
-  padding-left: 1.5rem;
 } 
 
 ul  ul  ul  ul{
   list-style-type: disc;
-  padding-left: 1.5rem;
 }
 ol {
   list-style-type: decimal;
-  padding-left: 1.5rem;
 }
 ol ol {
   list-style-type: lower-alpha;
-  padding-left: 1.5rem;
 }
 
 ol ol ol {
   list-style-type: lower-roman;
-  padding-left: 1.5rem;
 }
 
 button {
